--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var x = new DOMParser()
 (!x || !x.shadowRoot) && g();
 </script><div class="announcement-banner__container astro-CKKB6XPP">
   <p class="astro-CKKB6XPP">
-    <a href="https://gyan.medium.com" class="astro-CKKB6XPP" target="_blank">
+    <a href="https://gyann.medium.com" class="astro-CKKB6XPP" target="_blank">
       Read My Latest Blog Post
     </a>
   </p>
