hiding naked email

--- a/company/contact/index.html
+++ b/company/contact/index.html
@@ -221,7 +221,7 @@ var x = new DOMParser()
 				</div>
 			</div>
 			<div class="col-2__container astro-QLNHSZFU">
-				<form name="Contact Form" method="POST" action="https://formsubmit.co/gyan@epiction.co" class="astro-6RJD5OWE">
+				<form name="Contact Form" method="POST" action="https://formsubmit.co/1c82ae8c5085866e52dce0a2d393c340" class="astro-6RJD5OWE">
   <div class="form-field__container astro-5QZQD2EV">
   <label for="Name" class="astro-5QZQD2EV">Name</label>
   <input type="text" name="Name" placeholder="John Doe" class="astro-5QZQD2EV">
