--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ var x = new DOMParser()
 				Mangatize is an online merchandise store. We are committed to providing our customers with a one-stop-shop for all their Anime needs, and strive to deliver the best customer experience possible.
 			</p>
 		</div>
-        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://epiction.co" target="" rel="">Learn More</a>
+        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://goto.mangatize.shop" target="_blank" rel="">Learn More</a>
 
 
       </div>
@@ -377,7 +377,7 @@ var x = new DOMParser()
 				Epiction Interactive is a premier software startup owned by Gyann Co creating innovative and engaging games for players of all ages. Offering a wide variety of gaming experiences.
 			</p>
 		</div>
-        <a class="btn undefined btn--outlined undefined astro-5VNEE24L" href="https://goto.mangatize.shop/" target="" rel="">Learn More</a>
+        <a class="btn undefined btn--outlined undefined astro-5VNEE24L" href="https://epiction.co" target="_blank" rel="">Learn More</a>
 
 
       </div>
@@ -388,7 +388,7 @@ var x = new DOMParser()
 				'Coders Potion' the ultimate coffee stop for techies and code wizards. We might not be brewing in a lab, but we're definitely brewing up some awesome blends that pair perfectly with lines of code.
 			</p>
 		</div>
-        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://coderspotion.company.site" target="" rel="">Learn More</a>
+        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://coderspotion.company.site" target="_blank" rel="">Learn More</a>
 
 
       </div>
