--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ var x = new DOMParser()
 		</div>
 			<div class="text-and-image__btns astro-I47SMRPE">
 				<div>
-			<a class="btn undefined undefined undefined astro-5VNEE24L" href="https://www.linkedin.com/in/gyanprabhat/" target="_blank" rel="">Connect on LinkedIn <span class="custom-icon__span astro-5VNEE24L"><svg viewBox="0 0 24 24" astro-icon="ic:baseline-chevron-right"><path fill="currentColor" d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg></span></a>
+			<a class="btn undefined undefined undefined astro-5VNEE24L" href="https://in.linkedin.com/in/gyanprabhat" target="_blank" rel="">Connect on LinkedIn <span class="custom-icon__span astro-5VNEE24L"><svg viewBox="0 0 24 24" astro-icon="ic:baseline-chevron-right"><path fill="currentColor" d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg></span></a>
 
 
 		</div>
