--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@ var x = new DOMParser()
   <section class="youtube-embed__section astro-IISG4BTM">
     
 
-<div class="youtube-embed__container youtube-embed__container--rounded astro-M7H4CTUH">
-  <iframe src="https://www.youtube.com/embed/9OYVsGsolIc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" class="astro-M7H4CTUH">
+<div class="youtube-embed__container youtube-embed__container--rounded astro-M7H4CTUH">	
+  <iframe src="https://www.youtube.com/embed/I6fmYT9bYtg?si=p7hREf2YOqBDH3Kh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" class="astro-M7H4CTUH">
   </iframe>
 </div>
   </section>
