--- a/company/contact/index.html
+++ b/company/contact/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width">
 <link rel="icon" type="image/png" href="/favicon.png">
 <!-- Primary Meta Tags -->
-<title>Contact | Gyann</title>
-<meta name="title" content="Contact | Gyann">
+<title>Contact | Gyan Prabhat</title>
+<meta name="title" content="Contact | Gyan Prabhat">
 <meta name="description" content="Contact Page">
 <link rel="canonical" href="https://gyan.epiction.co/company/contact/">
 <!-- Generator -->
