--- a/company/about/index.html
+++ b/company/about/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width">
 <link rel="icon" type="image/png" href="/favicon.png">
 <!-- Primary Meta Tags -->
-<title>About | Gyann</title>
-<meta name="title" content="About | Gyann">
+<title>About | Gyan Prabhat</title>
+<meta name="title" content="About | Gyan Prabhat">
 <meta name="description" content="About Page">
 <link rel="canonical" href="https://gyan.epiction.co/company/about/">
 <!-- Generator -->
