--- a/company/legal/index.html
+++ b/company/legal/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width">
 <link rel="icon" type="image/png" href="/favicon.png">
 <!-- Primary Meta Tags -->
-<title>Legal Page | Gyann</title>
-<meta name="title" content="Legal Page | Gyann">
+<title>Legal Page | Gyan Prabhat</title>
+<meta name="title" content="Legal Page | Gyan Prabhat">
 <meta name="description" content="This is the legal page template. It is a great starter for your company's Terms of Service, Terms &#38; Conditions, Privacy Policy, etc.">
 <link rel="canonical" href="https://gyan.epiction.co/company/legal/">
 <!-- Generator -->
