--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ var x = new DOMParser()
 (!x || !x.shadowRoot) && g();
 </script><div class="announcement-banner__container astro-CKKB6XPP">
   <p class="astro-CKKB6XPP">
-    <a href="https://gyann.medium.com" class="astro-CKKB6XPP" target="_blank">
-      Read My Latest Blog Post
+    <a href="https://open.spotify.com/album/64xe5iGOqlKjR5AwACFxWh" class="astro-CKKB6XPP" target="_blank">
+      Listen to my latest release on Spotify!
     </a>
   </p>
 </div>
@@ -309,7 +309,7 @@ var x = new DOMParser()
 		<div class="text-and-image__text astro-I47SMRPE">
 			<div>
 			<h1>Gyan Prabhat</h1>
-			<p>Student & Techpreneur | Hobyyist film-maker | Tech nerd <br> Proud founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a></p>
+			<p>Student & Techpreneur | Hobyyist film-maker | Tech nerd <br> Proud founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a><<br> I make music sometimes as well!/p>
 		</div>
 			<div class="text-and-image__btns astro-I47SMRPE">
 				<div>
