--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ var x = new DOMParser()
 		<div class="text-and-image__text astro-I47SMRPE">
 			<div>
 			<h1>Gyan Prabhat</h1>
-			<p>Student & Techpreneur | Hobyyist film-maker | Tech nerd <br> Proud founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a><<br> I make music sometimes as well!</p>
+			<p>Student & Techpreneur | Hobyyist film-maker | Tech nerd <br> Proud founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a><br> I make music sometimes as well!</p>
 		</div>
 			<div class="text-and-image__btns astro-I47SMRPE">
 				<div>
