--- a/company/about/index.html
+++ b/company/about/index.html
@@ -212,9 +212,9 @@ var x = new DOMParser()
 			<div>
 			<h1>About Me</h1>
 			<p>
-				</p><p>Hey there I'm <span class="name"><b>Gyan Prabhat</b></span>, a student and techpreneur from india. I'm currently pursuing Diploma in CSE (it's a waste of time) and building a premier software startup called Epiction Intetactive focusing on Video Game Development with other interactive products. I'm all about technology and always curious to learn new things. <br></p>
-        I'm a Hobyyist film-maker who likes to capture most cinematic shots and tell stories through them. I'm also learning the ways of an research author as I have multiple research drafts to be reviewed.
-			
+				</p><p><span class="name"><b>Gyan Prabhat</b></span> is an Indian tech entrepreneur and the founder of Epiction Interactive, a company specializing in video game development, AI tools, and digital services. Since 2022, Gyan has been at the forefront of technological innovation, driving the development of creative and interactive products. In addition to his tech ventures, Gyan is exploring the world of cinematography through a film project listed on IMDb, blending his passion for technology with creative storytelling. He is also a state-level gold medalist in boxing, highlighting his diverse achievements. Active on platforms like LinkedIn, Crunchbase, and IMDb, Gyan continues to influence the tech industry while pursuing his varied interests.
+
+
 		</div>
 		</div>
 		<div class="hero-section__image astro-HIWWRLFE">
