--- a/index.html
+++ b/index.html
@@ -355,7 +355,11 @@ var x = new DOMParser()
 		<div class="text-and-image__text astro-I47SMRPE">
 			<div>
 			<h1>Gyan Prabhat</h1>
-			<p>Student & Techpreneur | Hobyyist film-maker | Tech nerd <br> Proud founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a><br> I make music sometimes as well!</p>
+<p>
+    Student & Tech Entrepreneur | Hobbyist Filmmaker | Tech Enthusiast <br>
+    Proud Founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a> <br>
+    Occasional Music Maker
+</p>
 		</div>
 			<div class="text-and-image__btns astro-I47SMRPE">
 				<div>
