--- a/company/about/index.html
+++ b/company/about/index.html
@@ -212,7 +212,7 @@ var x = new DOMParser()
 			<div>
 			<h1>About Me</h1>
 			<p>
-				</p><p><span class="name"><b>Gyan Prabhat</b></span> is an Indian tech entrepreneur and the founder of Epiction Interactive, a company specializing in video game development, AI tools, and digital services. Since 2022, Gyan has been at the forefront of technological innovation, driving the development of creative and interactive products. In addition to his tech ventures, Gyan is exploring the world of cinematography through a film project listed on IMDb, blending his passion for technology with creative storytelling. He is also a state-level gold medalist in boxing, highlighting his diverse achievements. Active on platforms like LinkedIn, Crunchbase, and IMDb, Gyan continues to influence the tech industry while pursuing his varied interests.
+<p><span class="name"><b>Gyan Prabhat</b></span> is an aspiring storyteller and tech entrepreneur, driven by a passion for blending creativity with innovation. As the founder of Epiction, a tech startup launched in 2022, Gyan explores the intersection of technology and art, crafting unique experiences across video games, AI tools, and digital media. His ventures include directing a solo film project, reflecting his commitment to pushing creative boundaries. With a visionary approach and relentless determination, Gyan continues to carve his path in both the tech and film industries, inspiring others along the way.</p>
 
 
 		</div>
