--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@ var x = new DOMParser()
 			<div>
 			<h1>Gyan Prabhat</h1>
 <p>
-    Student & Tech Entrepreneur | Hobbyist Filmmaker | Tech Enthusiast <br>
+    Techpreneur, Creative Consultant, Film Enthusiast, Digital Media Producer, Video Game Artist & Publisher <br>
     Proud Founder of <a href="https://epiction.co/" target="_blank">Epiction Interactive</a> <br>
-    Occasional Music Maker
+    Published Author & Music Composer
 </p>
 		</div>
 			<div class="text-and-image__btns astro-I47SMRPE">
