--- a/index.html
+++ b/index.html
@@ -411,12 +411,12 @@ var x = new DOMParser()
   <section class="three-col-text__section astro-J2JXBTMS">
       <div class="three-col-text__column astro-J2JXBTMS">
         <div>
-			<h2>Mangatize.shop</h2>
+			<h2>GetSofworks</h2>
 			<p>
-				Mangatize is an online merchandise store. We are committed to providing our customers with a one-stop-shop for all their Anime needs, and strive to deliver the best customer experience possible.
+				Take your business to the next level with Softworks. From web development to 3D modeling, we have the digital solutions you need for online success.
 			</p>
 		</div>
-        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://goto.mangatize.shop" target="_blank" rel="">Learn More</a>
+        <a class="btn undefined undefined undefined astro-5VNEE24L" href="https://getsoftworks.com" target="_blank" rel="">Learn More</a>
 
 
       </div>
