--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
 
             <!-- Bottom Data Line -->
             <div class="border-t-4 border-black bg-indi-paper p-4 font-type text-xs md:text-sm flex flex-col md:flex-row justify-between items-center z-10 gap-2">
-                <span class="bg-black text-white px-2">GENESIS: 2002</span>
+                <span class="bg-black text-white px-2">Born in Ranchi, India</span>
                 <span class="animate-flicker text-indi-red font-bold text-xl order-first md:order-none">● LIVE FEED</span>
-                <span class="bg-black text-white px-2 text-center">MUMBAI • VADODARA • VARANASI • RANCHI</span>
+                <span class="bg-black text-white px-2 text-center">Currently travelling between MUMBAI • VADODARA • VARANASI • RANCHI</span>
             </div>
         </header>
 
