--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <div class="md:col-span-5 relative">
                         <div class="border-4 border-black p-2 bg-indi-teal transform -rotate-1 shadow-[10px_10px_0px_rgba(0,0,0,0.5)]">
                             <div class="w-full h-96 bg-black grayscale contrast-125 relative overflow-hidden group">
-                                <div class="w-full h-full bg-[url('https://images.unsplash.com/photo-1507679799987-c73779587ccf?q=80&w=2071&auto=format&fit=crop')] bg-cover bg-center opacity-70 group-hover:scale-110 transition-transform duration-500 mix-blend-luminosity"></div>
+                                <div class="w-full h-full bg-[url('gyan.jpg')] bg-cover bg-center opacity-70 group-hover:scale-110 transition-transform duration-500 mix-blend-luminosity"></div>
                                 <div class="absolute inset-0 bg-indi-red mix-blend-lighten opacity-40"></div>
                                 <div class="absolute bottom-0 left-0 w-full bg-black text-white font-tech text-xl p-2 text-center">FIG 1.0: THE ARCHITECT</div>
                             </div>
